# HDF5-Blosc2-bench

./: CMakeLists.txt  README.md
H5D/: CMakeLists.txt  h5ex_d_checksum.c  h5ex_d_chunk.c  h5ex_d_hyper.c
bench/: CMakeLists.txt  README.md  caterva_utils.c  gzip_vs_cat.c  gzip_vs_cat_schunk.c  gzip_vs_cat_schunk_parallel.c  h5ex_d_chunk_gzip.c  h5ex_d_gzip_vs_cat.c  h5ex_d_gzip_vs_cat_schunk.c  h5ex_d_gzip_vs_cat_schunk_parallel.c
data/: easy.cat
